# kiro-account-manager

./: .gitignore  README.md  README_ru-RU.md  README_zh-CN.md  package-lock.json  package.json
.github/workflows/: release.yml
locales/: en-US.json  ru-RU.json  zh-CN.json
server/: .env  Cargo.toml  Dockerfile  docker-compose.yml
server/src/: config.rs  db.rs  error.rs  main.rs  middleware.rs  models.rs
server/src/handlers/: account.rs  auth.rs  mod.rs  sync.rs  users.rs
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bt_mail.rs  mail_db.rs  main.rs
src-tauri/src/commands/: mail_cmd.rs  mod.rs
src/components/: About.jsx  GlobalLogin.tsx  Sidebar.jsx  SyncControl.tsx  SyncLogin.tsx  UpdateNotification.jsx
src/components/AccountManager/: AccountCard.jsx  AccountHeader.jsx  AccountTable.jsx  RefreshProgressModal.jsx  index.jsx
src/components/MailManager/: CreateMailModal.jsx  MailTable.jsx  index.jsx
src/components/UserManager/: CreateUserModal.jsx  EditUserModal.jsx  index.jsx
src/services/: authService.ts  occupyService.ts  syncService.ts  types.ts  userService.ts
~/.tauri/: kiro-account-manager.key  kiro-account-manager.key.pub
